align in boxes fixed

--- a/src/pages/shop/styles.module.scss
+++ b/src/pages/shop/styles.module.scss
@@ -49,6 +49,7 @@
 .chest {
     display: flex;
     align-items: center;
+    text-align: left;
     gap: 16px;
     background-color: var(--dark);
     box-shadow: var(--shadow-1);
